# rfmpy

./: .2015.359.19.20.51.IV.PLMA.HHR.SAC  .readthedocs.yaml  BW_eida_routing.xml  CH_eida_routing.xml  CR_eida_routing.xml  CZ_eida_routing.xml  EPcrust.json  FR_eida_routing.xml  GR_eida_routing.xml  GU_eida_routing.xml  HU_eida_routing.xml  MN_eida_routing.xml  NI_eida_routing.xml  OE_eida_routing.xml  OX_eida_routing.xml  RD_eida_routing.xml  README.md  RRF_list.txt  SI_eida_routing.xml  SK_eida_routing.xml  SX_eida_routing.xml  TH_eida_routing.xml  TODO.md  XT_eida_routing.xml  Z3_eida_routing.xml  Z3_eth.xml  all_G3.npy  compute_RF_migration_spher.py  license.txt  logfile.txt  logfile_EASI.txt  moho_depths.txt  moho_depths_1-6.txt  moho_depths_Cross-section 1.txt  moho_depths_Cross-section_-1.txt  moho_depths_Cross-section_10.txt  moho_depths_Cross-section_11.txt  moho_depths_Cross-section_12.txt  moho_depths_Cross-section_13.txt  moho_depths_Cross-section_14.txt  (+56 more)
2BE_DELETED/3D_migration/: .~lock.scheme.doc#  ccp2d.m  scheme.doc
2be_removed/: vProfile.txt
2be_removed/3D_migration/: ccp.m  ccp3d.m
data/3D_grids/: readme.md
data/EPcrust/: README_xyz.txt
data/RF/: 2015.013.20.18.38.CH.ACB.RRF.SAC  2015.013.20.18.38.CH.MUO.RRF.SAC  2015.013.20.18.42.CH.MMK.RRF.SAC  (+137 more)
docs/: TODO.md  conf.py  environment.yml  index.rst  install.rst  installation.md  installation.rst  moho_example.rst  mtz_example.md  mtz_example.rst  new_todo.md  requirements.txt  requirements_dev.txt  tutorial.md  tutorial.rst  tutorials.rst
rfmpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1002 files in other folders)
