[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfmpy"
version = "0.1.0"
description = "Set of codes for calculating receiver functions and time to depth migration."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "license.txt"}
authors = [
    {name = "rfmpy devs"},
    {email = "adjtomo@gmail.com"}
]
dependencies = [
            "obspy>=1.2",
            "pandas==1.1.0",
            "matplotlib<3.3",
            "numpy"
            "pyproj>=2.5",
            "scipy",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "ipython", "ipdb"]

[project.urls]
homepage = "https://github.com/kemichai/rfmpy/"
documentation = "https://rfmpy.readthedocs.io"
repository = "https://github.com/kemichai/rfmpy/"

